[gd_scene load_steps=7 format=3 uid="uid://cdh1c0yenr2w4"]

[ext_resource type="Script" uid="uid://b8k7r4h4a6pak" path="res://scenes/game/popout_element.gd" id="1_hpmv6"]
[ext_resource type="Texture2D" uid="uid://ohmonvyuqeuf" path="res://assets/icons/minus.png" id="1_tf732"]
[ext_resource type="Texture2D" uid="uid://dogldee47qjtf" path="res://assets/highlights/arena_border_highlight_selected.png" id="2_hgm7i"]
[ext_resource type="Texture2D" uid="uid://l1rbxm47rsmf" path="res://assets/highlights/arena_border_highlight_pressed.png" id="3_jcvpf"]
[ext_resource type="Texture2D" uid="uid://5snhawao5bym" path="res://assets/icons/plus.png" id="4_sdq12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3o6m"]
bg_color = Color(0.192157, 0.192157, 0.192157, 0.356863)

[node name="PopoutElement" type="PanelContainer"]
offset_right = 122.0
offset_bottom = 204.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o3o6m")
script = ExtResource("1_hpmv6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TopLabelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/TopContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/TopContainer/TopLabelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TopLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/TopContainer/TopLabelContainer/MarginContainer"]
layout_mode = 2
text = "TOP"
horizontal_alignment = 1

[node name="NumberLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/TopContainer/TopLabelContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "3"
horizontal_alignment = 1

[node name="CardControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MinusControl" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls/MinusControl"]
layout_mode = 2
texture = ExtResource("1_tf732")
expand_mode = 4

[node name="MinusButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls/MinusControl"]
layout_mode = 2
texture_pressed = ExtResource("3_jcvpf")
texture_hover = ExtResource("2_hgm7i")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlusControl" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls/PlusControl"]
layout_mode = 2
texture = ExtResource("4_sdq12")
expand_mode = 4

[node name="PlusButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/CardControls/PlusControl"]
layout_mode = 2
texture_pressed = ExtResource("3_jcvpf")
texture_hover = ExtResource("2_hgm7i")
ignore_texture_size = true
stretch_mode = 0

[node name="CardPlaceholder" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(112.5, 157.5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/CardControls/MinusControl/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/CardControls/PlusControl/PlusButton" to="." method="_on_plus_button_pressed"]
